# sfml-2048

./: CMakeLists.txt  README.md
res/: images license.txt  restart icon license.txt
src/: CMakeLists.txt  board.cpp  board.h  endgamescene.cpp  endgamescene.h  game.cpp  game.h  main.cpp  mainscene.cpp  mainscene.h  resourcemanager.cpp  resourcemanager.h  scene.h  scenemanager.cpp  scenemanager.h  spritebutton.cpp  spritebutton.h
